--- a/app.html
+++ b/app.html
@@ -52,7 +52,77 @@
 <!--  ====== Main Section ========= -->
 <main class="flex-shrink-0">
     <div class="container mt-5">
-        
+        <h1>Loan Calculator</h1>
+        <div class="row row-cols-1 row-cols-lg-2">
+            <!-- Loan Amount, Payment months and Interest Rate-->
+            <div class="col">
+                <div class="bg-light h-100">
+                    <div class="row gy-2 gx-3">
+                        <div class="col-12">
+                            <h6>Loan Amount</h6>
+                            <input type="number" id="LoanAmount" class="form-control" placeholder="Loan Amount" value=0 aria-label="Loan Amount">
+                        </div>
+                        <div class="col-12">
+                            <h6>Monthly Payments</h6>
+                            <input type="number" id="MonthlyPayments" class="form-control" placeholder="Monthly Payments" value=0 aria-label="Monthly Payments">
+                        </div>
+                        <div class="col-12">
+                            <h6>Interest Rate</h6>
+                            <input type="number" id="InterestRate" class="form-control" placeholder="Interest Rate" value=0 aria-label="Interest Rate">
+                        </div>
+                        <div class="col-12 text-end">
+                            <button type="submit" class="btn btn-primary">Calculate</button>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+            <!-- Payment information-->
+            <div class="col">
+                <div class="row gy-2 gx-3 alert fade show " id="alert" role="alert">
+                        <div class="col-12 text-center">
+                            <h4>Your Monthly Payments</h4>
+                        </div>
+                        <div class="col-12 text-center">
+                            <h3>Big number</h3>
+                        </div>
+                        <div class="row gy-2 gx-3">
+                            <div class="col-6">Total Principal </div>
+                            <div class="col-6">Money </div>
+                            <div class="col-6">Total Interest </div>
+                            <div class="col-6">Money </div>
+                            <div class="col-6">Total Cost </div>
+                            <div class="col-6">Money </div>
+                        </div>
+
+                    
+
+
+
+
+
+
+                </div>
+            </div>
+        </div>
+
+        <div class="row table-responsive">
+            <table class="table table-striped table-bordered">
+                <thead class="bg-dark text-light"> 
+                    <tr>
+                    <th>Month</th>
+                    <th>Payment</th>
+                    <th>Principal</th>
+                    <th>Interest</th>
+                    <th>Total Interest</th>
+                    <th>Balance</th>
+                </tr></thead>
+
+            </table>
+
+
+
+        </div>
+
     </div>
 </main>
 
