--- a/app.html
+++ b/app.html
@@ -78,7 +78,7 @@
             </div>
             <!-- Payment information-->
             <div class="col">
-                <div class="row gy-2 gx-3 alert fade show " id="alert" role="alert">
+                <div class="row gy-2 gx-3 alert fade show invisible" id="alert" role="alert">
                         <div class="col-12 text-center">
                             <h4>Your Monthly Payments</h4>
                         </div>
